# molconfviewer

./: .gitignore  .readthedocs.yaml  CHANGES.txt  LICENSE.txt  README.md  environment.yml  setup.cfg  setup.py
MolConfViewer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
docs/: environment.yaml  index.rst  requirements.txt  usage.rst
docs/source/: api.rst  conf.py  index.rst  usage.rst
docs/source/notebooks/: molconfviewer_test.ipynb
molconfviewer/: molconfviewer.py
molconfviewer.egg-info/: PKG-INFO  SOURCES.txt
molconfviewer/tests/: molconfviewer_test.ipynb  molconfviewer_test.py
