[metadata]
name = molconfviewer
version = 0.0.2
author = Benoit Baillif
author_email = benoit.baillif@gmail.com
description = package to visualize molecules and their conformations in Jupyter
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/benoitba/molconfviewer
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent